<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Not Settings</string>
    <string name="log_out">Log Out</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="counter">0</string>
    <string name="rng_intro">Here is a random number from 0 to 100</string>
    <string name="increment">+1</string>
    <string name="decrement">-1</string>
    <string name="pop">Pop!</string>
    <string name="rng">RNG</string>
    <string name="random_heading">R</string>
    <string name="submit">SUBMIT</string>
</resources>